# ge-agentplatform-demos

./: .gitignore  CLAUDE.md  LEARNINGS.md  README.md  agent-gateway-ug.md  agents-iap-policy.json  skills-lock.json  toolspec.json
.agents/skills/fastmcp-builder/: .skillfish.json
_template/demo-agent/: deploy_agent.py  pyproject.toml
_template/demo-agent/app/: __init__.py  agent.py
_template/demo-agent/app/app_utils/: telemetry.py
a2a-demo/: .env.template  ARCHITECTURE.md  DEMO.md  README.md  deploy.sh  undeploy.sh
a2a-demo/orchestrator-agent/: README.md  pyproject.toml
a2a-demo/orchestrator-agent/app/: agent.py
a2a-demo/orchestrator-agent/app/app_utils/: telemetry.py
a2a-demo/specialist-agent/: README.md  pyproject.toml
a2a-demo/specialist-agent/app/app_utils/: telemetry.py
code-execution-demo/: .env.template  .gitignore  ARCHITECTURE.md  DEMO.md  LESSONS.md  README.md  deploy.sh  undeploy.sh
code-execution-demo/analyst-agent/: pyproject.toml
code-execution-demo/analyst-agent/app/: agent.py
code-execution-demo/analyst-agent/app/app_utils/: telemetry.py  typing.py
conductor/: demo-plan.md  observability-plan.md
evals-demo/: .env.template  ARCHITECTURE.md  DEMO.md  LESSONS.md  README.md  deploy.sh  undeploy.sh
evals-demo/demo-agent/: README.md  pyproject.toml
evals-demo/demo-agent/app/: agent.py  agent_runtime_app.py
evals-demo/demo-agent/app/app_utils/: telemetry.py  typing.py
evals-demo/scripts/: generate_traffic.py
experimental/: README.md  setup-project.sh
experimental/_template/: .env.template  deploy.sh  undeploy.sh
experimental/_template/demo-agent/app/: agent_runtime_app.py
experimental/_template/demo-agent/app/app_utils/: telemetry.py
experimental/governance-demo/: .env.template  GAPS.md  authz-profile.yaml.template
experimental/governance-demo/demo-agent/: README.md  deploy_agent.py
experimental/governance-demo/demo-agent/app/: agent.py
experimental/governance-demo/demo-agent/app/app_utils/: telemetry.py  typing.py
experimental/governance-demo/mcp-server/: main.py  requirements.txt
experimental/oauth-3lo-keycloak-demo/: DEMO.md  LESSONS.md  deploy.sh  undeploy.sh
experimental/oauth-3lo-keycloak-demo/agent/app/: agent_runtime_app.py
experimental/oauth-3lo-keycloak-demo/frontend/: Dockerfile
experimental/oauth-3lo-keycloak-demo/frontend/app/: main.py
experimental/oauth-3lo-keycloak-demo/mcp-server/: Dockerfile
experimental/oauth-3lo-keycloak-demo/mcp-server/app/: main.py
experimental/test-agent-gateway-codelab/: ARCHITECTURE.md
governance-demo/: .env.template  GAPS.md  README.md  authz-policy.yaml.template  deploy.sh  gateway.yaml  gateway.yaml.template  iap-allow-policy.json.example  iap-authz-extension.yaml.template  iap-extension.yaml  mcp-deny-policy.json  undeploy.sh
governance-demo/demo-agent/: .gitignore  README.md  deploy_agent.py  deployment_metadata.json  pyproject.toml  test_agent.py  test_deployed_agent.py
governance-demo/demo-agent/app/: agent.py  agent_runtime_app.py  agent_runtime_app.py.bak
governance-demo/demo-agent/app/.adk/: session.db
governance-demo/demo-agent/tests/integration/: test_agent_engine_app.py
governance-demo/mcp-server/: main.py
mcp-discovery-demo/: .env.template  .gitignore  ARCHITECTURE.md  DEMO.md  LESSONS.md  README.md  deploy.sh  local_test.py  undeploy.sh
mcp-discovery-demo/market-data-mcp/: Dockerfile  pyproject.toml  toolspec.json
mcp-discovery-demo/market-data-mcp/app/: fake_data.py  main.py
mcp-discovery-demo/market-data-mcp/tests/: test_http_wire.py  test_tools.py
mcp-discovery-demo/news-sentiment-mcp/: pyproject.toml  toolspec.json
mcp-discovery-demo/news-sentiment-mcp/app/: fake_data.py  main.py
mcp-discovery-demo/news-sentiment-mcp/tests/: test_tools.py
mcp-discovery-demo/orchestrator-agent/: pyproject.toml
mcp-discovery-demo/orchestrator-agent/app/: agent.py  discovery.py  mcp_auth.py
mcp-discovery-demo/orchestrator-agent/app/app_utils/: typing.py
mcp-discovery-demo/orchestrator-agent/tests/unit/: test_discovery.py
mcp-discovery-demo/portfolio-mcp/: pyproject.toml  toolspec.json
mcp-discovery-demo/portfolio-mcp/app/: fake_data.py  main.py
mcp-discovery-demo/portfolio-mcp/tests/: test_tools.py
oauth-3lo-keycloak-demo/: .env.template  ARCHITECTURE.md  DEMO.md  LESSONS.md  README.md  deploy.sh  undeploy.sh
oauth-3lo-keycloak-demo/agent/: pyproject.toml
oauth-3lo-keycloak-demo/agent/app/: agent.py  agent_runtime_app.py
oauth-3lo-keycloak-demo/agent/app/app_utils/: telemetry.py  typing.py
oauth-3lo-keycloak-demo/frontend/: pyproject.toml
oauth-3lo-keycloak-demo/frontend/app/: main.py
oauth-3lo-keycloak-demo/frontend/app/templates/: index.html
oauth-3lo-keycloak-demo/mcp-server/: pyproject.toml  toolspec.json
oauth-3lo-keycloak-demo/mcp-server/app/: auth.py  common.py  config.py  middleware.py
oauth-3lo-keycloak-demo/mcp-server/app/tools/: profile.py
sessions-memory-demo/: .env.template  ARCHITECTURE.md  DEMO.md  GAPS.md  LESSONS.md  README.md  deploy.sh  undeploy.sh
sessions-memory-demo/demo-agent/: .gitignore  README.md  deploy_agent.py  pyproject.toml
sessions-memory-demo/demo-agent/app/: agent.py  agent_runtime_app.py  memory_config.py  mock_data.py  tools.py
sessions-memory-demo/demo-agent/app/app_utils/: telemetry.py  typing.py
sessions-memory-demo/demo-agent/tests/eval/: eval_config.json
sessions-memory-demo/demo-agent/tests/integration/: test_agent.py
sessions-memory-demo/scripts/: cleanup_sessions_memories.py  demo_full.py  demo_stateful.py  demo_stateless.py
spiffe-registry-demo/: .env.template  ARCHITECTURE.md  DEMO.md  README.md  deploy.sh  undeploy.sh
spiffe-registry-demo/orchestrator-agent/: pyproject.toml
spiffe-registry-demo/orchestrator-agent/app/: agent.py
spiffe-registry-demo/specialist-agent/: pyproject.toml
spiffe-registry-demo/specialist-agent/app/: a2a_app.py  agent.py
spiffe-registry-demo/specialist-agent/app/app_utils/: typing.py
(+11 files in other folders)
