[project]
name = "evals-demo-agent"
version = "0.1.0"
description = "Agent Platform evals demo — online monitoring with Gen AI Evaluation Service"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.130.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "pandas",
    "protobuf>=6.31.1,<7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agents-cli]
name = "evals-demo-agent"
description = "Agent Platform evals demo"
agent_directory = "app"

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"
base_template = "adk"
