[project]
name = "fintoolkit-news-sentiment-mcp"
version = "0.1.0"
description = "Mocked news + sentiment MCP server for the fintoolkit discovery demo."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
