[project]
name = "fintoolkit-orchestrator"
version = "0.1.0"
description = "Financial analyst orchestrator that dynamically discovers MCP tools from Agent Registry."
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[a2a,agent-identity]>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.130.0",
    "mcp>=1.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.27.0,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "uv.lock,.venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.agents-cli]
name = "fintoolkit-orchestrator"
description = "Financial analyst orchestrator with dynamic MCP discovery"
base_template = "adk"
agent_directory = "app"
generated_at = "2026-05-18T16:49:36.702070+00:00"
acli_version = "0.1.3"

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"
session_type = "none"
cicd_runner = "skip"
include_data_ingestion = false
datastore = "none"
