[project]
name = "oauth-3lo-mcp"
version = "0.1.0"
description = "MCP server protected by Keycloak JWT (Bearer) for the Agent Identity 3LO demo"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=2.13,<3",
    "PyJWT[crypto]>=2.8,<3",
    "starlette>=0.37,<1",
    "uvicorn>=0.29,<1",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = ["E501"]
